Add `numpy` section to Ask talk (#22)
* Add environment config

* Add local gitignore

* Replace images

* Update notebook

* Add data collection script

* Add numpy section

* Refresh notebook

--- a/what-is-dask/main.ipynb
+++ b/what-is-dask/main.ipynb
@@ -15,8 +15,7 @@
     "\n",
     "<font size='4'> Henry Wilde | \n",
     "<i class='fa fa-github' aria-hidden='false'></i>\n",
-    "<i class='fa fa-twitter' aria-hidden='false'></i> @daffidwilde </font>\n",
-    "<hr>"
+    "<i class='fa fa-twitter' aria-hidden='false'></i> @daffidwilde </font>"
    ]
   },
   {
@@ -47,8 +46,7 @@
     }
    },
    "source": [
-    "# Parallelising serial code with `dask.delayed`\n",
-    "---"
+    "# parellilisation with `dask.delayed`"
    ]
   },
   {
@@ -111,9 +109,7 @@
     }
    },
    "source": [
-    "We can use `dask.delayed` either by wrapping it around a function or by using a decorator at the point of definition.\n",
-    "\n",
-    "In either case, this indicates that the function should be executed lazily."
+    "---"
    ]
   },
   {
@@ -170,6 +166,94 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `numpy`-style linear algebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "import numpy as np\n",
+    "\n",
+    "size = 10_000\n",
+    "\n",
+    "rng = np.random.default_rng(0)\n",
+    "A = rng.normal(size=(size, size))\n",
+    "\n",
+    "A.mean(), A.std()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "Dask are currently developing a `np.random.default_rng` mimic [(dask#9038)](https://github.com/dask/dask/pull/9038), so global seeding will have to do!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "import dask\n",
+    "import dask.array as da\n",
+    "\n",
+    "da.random.seed(0)\n",
+    "A = da.random.normal(size=(size, size))\n",
+    "\n",
+    "results = A.mean(), A.std()\n",
+    "dask.compute(*results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask.visualize(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = da.random.normal(size=size)\n",
+    "\n",
+    "x = da.linalg.solve(A, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "x.visualize(rankdir=\"LR\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -177,10 +261,9 @@
     }
    },
    "source": [
-    "# Familiarity between `dask.dataframe` and `pandas.DataFrame`\n",
-    "---\n",
+    "# `pandas`-esque data handling\n",
     "\n",
-    "### In Pandas, we might have something like this:"
+    "Data available as a tarball [here](https://storage.googleapis.com/dask-tutorial-data/nycflights.tar.gz) or by running `./get_data.py`"
    ]
   },
   {
@@ -238,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The process is much the same in Dask:\n"
+    "---"
    ]
   },
   {
